[package]
name = "listup_precedent"
version = "0.1.0"
edition = "2021"
rust = "1.56.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.0", features = ["derive"] }
log = "0.4.17"
regex = "1.7.1"
reqwest = "0.11.13"
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
