[package]
name = "listup_precedent"
version = "0.1.0"
edition = "2021"
authors = ["Naoki Kaneko <puripuri2100@gmail.com>"]
license = "MIT"
description = "裁判例のデータ一覧を裁判所のホームページ(https://www.courts.go.jp)をスクレイピングして生成するソフトウェア"
readme = "README.md"
repository = "https://github.com/japanese-law-analysis/listup_precedent"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
github = { repository = "japanese-law-analysis/listup_precedent", workflow = "Rust CI" }

[dependencies]
anyhow = "1.0.68"
log = "0.4.17"
regex = "1.7.1"
reqwest = "0.11.13"
scraper = "0.14.0"
serde_json = "1.0.91"
tracing = "0.1.37"
url = "2.3.1"
jplaw_io = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "6e09b18" }
jplaw_data_types = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "6e09b18" }
jplaw_pdf2text = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "6e09b18" }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
clap = { version = "4.5.4", features = ["derive"] }
japanese_law_xml_schema = "4.0.0"
