[package]
name = "listup_precedent"
version = "0.2.1"
edition = "2021"
authors = ["Naoki Kitano <puripuri2100@gmail.com>"]
license = "MIT"
description = "裁判例のデータ一覧を裁判所のホームページ(https://www.courts.go.jp)をスクレイピングして生成するソフトウェア"
readme = "README.md"
repository = "https://github.com/japanese-law-analysis/listup_precedent"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
github = { repository = "japanese-law-analysis/listup_precedent", workflow = "Rust CI" }

[dependencies]
jplaw_io = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "6e09b18" }
jplaw_data_types = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "6e09b18" }
jplaw_pdf2text = { git = "https://github.com/japanese-law-analysis/jplaw_tools.git", rev = "6e09b18" }
japanese_law_xml_schema = "4.0.0"
anyhow = "1.0.102"
regex = "1.12.3"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
clap = { version = "4.5.61", features = ["derive"] }
tracing = "0.1.44"
serde_json = "1.0.149"
reqwest = "0.13.2"
scraper = "0.26.0"
